[gd_scene load_steps=2 format=2]

[ext_resource path="res://creation_layer.gd" type="Script" id=1]

[node name="CreationLayer" type="Node2D"]
script = ExtResource( 1 )

[node name="ProcessorName" type="TextEdit" parent="."]
margin_left = 189.063
margin_top = 235.551
margin_right = 445.063
margin_bottom = 267.551
rect_pivot_offset = Vector2( 156, 107.828 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemName" type="TextEdit" parent="."]
margin_left = 206.494
margin_top = 494.544
margin_right = 462.494
margin_bottom = 526.544
rect_pivot_offset = Vector2( 156, 107.828 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreadName" type="TextEdit" parent="."]
margin_left = 611.505
margin_top = 233.782
margin_right = 867.505
margin_bottom = 265.782
rect_pivot_offset = Vector2( 156, 107.828 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockCycles" type="TextEdit" parent="."]
margin_left = 190.049
margin_top = 299.37
margin_right = 254.049
margin_bottom = 331.37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemValue" type="TextEdit" parent="."]
margin_left = 207.986
margin_top = 567.105
margin_right = 271.986
margin_bottom = 599.105
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="TextEdit" parent="."]
margin_left = 610.964
margin_top = 325.671
margin_right = 866.964
margin_bottom = 581.671
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProcessorNameL" type="Label" parent="."]
margin_left = 64.0
margin_top = 237.198
margin_right = 169.0
margin_bottom = 269.198
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Processor Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockCyclesL" type="Label" parent="."]
margin_left = 64.0
margin_top = 300.0
margin_right = 143.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Clock Cycle Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemNameL" type="Label" parent="."]
margin_left = 79.7925
margin_top = 492.024
margin_right = 158.793
margin_bottom = 524.024
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Semaphore Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemValueL" type="Label" parent="."]
margin_left = 79.7925
margin_top = 572.246
margin_right = 158.793
margin_bottom = 604.246
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Semaphore Value"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreadNameL" type="Label" parent="."]
margin_left = 509.014
margin_top = 235.906
margin_right = 588.014
margin_bottom = 267.906
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Thread Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsL" type="Label" parent="."]
margin_left = 697.613
margin_top = 283.641
margin_right = 776.613
margin_bottom = 315.641
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Thread 
Instructions"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProcessorMessage" type="Label" parent="."]
margin_left = 285.0
margin_top = 300.0
margin_right = 440.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 0, 140.059 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionMessage" type="Label" parent="."]
margin_left = 660.05
margin_top = 670.812
margin_right = 815.05
margin_bottom = 702.812
rect_pivot_offset = Vector2( 0, 140.059 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemMessage" type="Label" parent="."]
margin_left = 290.964
margin_top = 571.144
margin_right = 445.964
margin_bottom = 603.144
rect_pivot_offset = Vector2( 0, 140.059 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateProcessor" type="Button" parent="."]
margin_left = 284.866
margin_top = 370.677
margin_right = 337.866
margin_bottom = 390.677
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateSem" type="Button" parent="."]
margin_left = 284.866
margin_top = 623.635
margin_right = 337.866
margin_bottom = 643.635
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateInstructions" type="Button" parent="."]
margin_left = 700.177
margin_top = 621.39
margin_right = 753.177
margin_bottom = 641.39
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProcessorTimer" type="Timer" parent="."]
one_shot = true

[node name="SemTimer" type="Timer" parent="."]
one_shot = true

[node name="ThreadTimer" type="Timer" parent="."]
one_shot = true
[connection signal="button_down" from="CreateProcessor" to="." method="_on_CreateProcessor_button_down"]
[connection signal="button_down" from="CreateSem" to="." method="_on_CreateSem_button_down"]
[connection signal="button_down" from="CreateInstructions" to="." method="_on_CreateInstructions_button_down"]
[connection signal="timeout" from="ProcessorTimer" to="." method="_on_ProcessorTimer_timeout"]
[connection signal="timeout" from="SemTimer" to="." method="_on_SemTimer_timeout"]
[connection signal="timeout" from="ThreadTimer" to="." method="_on_ThreadTimer_timeout"]
